[package]
name = "mcpctl"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["richard.anaya@gmail.com"]
description = "A CLI tool for interacting with MCP endpoints"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
mcp-client = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
